@@ -30,14 +30,28 @@ public class LlmWebFluxServiceImpl implements LlmService {
         Map<String, Object> requestBody = ModelConfigFactory.buildChatRequestBody(model, messages, true);
         String apiUrl = model.getBaseUrl().replaceAll("/$", "") + "/chat/completions";
 
-        // TODO: 测试用
         try {
-            String requestBodyJson = objectMapper.writerWithDefaultPrettyPrinter().writeValueAsString(requestBody);
-            log.info("发送LLM请求, model={}, apiUrl={}", model.getModelName(), apiUrl);
-            log.info("完整请求体 JSON:\n{}", requestBodyJson);
+            @SuppressWarnings("unchecked")
+            List<Map<String, Object>> msgList = (List<Map<String, Object>>) requestBody.get("messages");
+            int msgCount = msgList != null ? msgList.size() : 0;
+            int approxChars = 0;
+            if (msgList != null) {
+                for (Map<String, Object> m : msgList) {
+                    Object c = m.get("content");
+                    if (c instanceof String s) {
+                        approxChars += s.length();
+                    }
+                }
+            }
+            log.info("发送LLM请求, model={}, apiUrl={}, messages={}, approxContentChars={}",
+                    model.getModelName(), apiUrl, msgCount, approxChars);
+            if (log.isDebugEnabled()) {
+                String requestBodyJson = objectMapper.writerWithDefaultPrettyPrinter().writeValueAsString(requestBody);
+                log.debug("LLM 完整请求体 JSON:\n{}", requestBodyJson);
+            }
         } catch (Exception e) {
-            log.warn("格式化请求体失败, 使用默认日志输出: {}", e.getMessage());
-            log.info("发送LLM请求, model={}, apiUrl={}, requestBody={}", model.getModelName(), apiUrl, requestBody);
+            log.warn("记录 LLM 请求摘要失败: {}", e.getMessage());
+            log.info("发送LLM请求, model={}, apiUrl={}", model.getModelName(), apiUrl);
         }
 
         WebClient webClient = createWebClient();
@@ -49,9 +63,9 @@ public class LlmWebFluxServiceImpl implements LlmService {
                 .bodyValue(requestBody)
                 .retrieve()
                 .bodyToFlux(String.class)
-                .doOnNext(line -> log.debug("收到LLM原始响应行: {}", line))
+                .doOnNext(line -> log.trace("收到LLM原始响应行: {}", line))
                 .flatMap(this::parseSseLine)
-                .doOnNext(chunk -> log.debug("解析后的LlmChunk: content={}, done={}, error={}", 
+                .doOnNext(chunk -> log.trace("解析后的LlmChunk: content={}, done={}, error={}", 
                     chunk.getContent(), chunk.isDone(), chunk.getError()))
                 .onErrorResume(e -> {
                     log.error("LLM流式请求失败, model={}, error={}", model.getModelName(), e.getMessage(), e);
@@ -62,51 +76,51 @@ public class LlmWebFluxServiceImpl implements LlmService {
 
     private Mono<LlmChunk> parseSseLine(String line) {
         line = line.trim();
-        log.debug("parseSseLine - 原始行: {}", line);
-        
+        log.trace("parseSseLine - 原始行: {}", line);
+
         if (line.isEmpty()) {
-            log.debug("parseSseLine - 空行，跳过");
+            log.trace("parseSseLine - 空行，跳过");
             return Mono.empty();
         }
-        
+
         String data = line;
         if (line.startsWith("data:")) {
             data = line.substring(5).trim();
         }
-        log.debug("parseSseLine - data部分: {}", data);
-        
+        log.trace("parseSseLine - data部分: {}", data);
+
         if ("[DONE]".equals(data)) {
-            log.debug("parseSseLine - 收到[DONE]标记");
+            log.trace("parseSseLine - 收到[DONE]标记");
             return Mono.just(LlmChunk.of("", true));
         }
         try {
             Map<String, Object> json = objectMapper.readValue(data, Map.class);
-            log.debug("parseSseLine - 解析后的JSON: {}", json);
-            
+            log.trace("parseSseLine - 解析后的JSON: {}", json);
+
             List<Map<String, Object>> choices = (List<Map<String, Object>>) json.get("choices");
             if (choices != null && !choices.isEmpty()) {
                 Map<String, Object> delta = (Map<String, Object>) choices.get(0).get("delta");
-                log.debug("parseSseLine - delta: {}", delta);
-                
+                log.trace("parseSseLine - delta: {}", delta);
+
                 if (delta != null) {
                     String content = (String) delta.get("content");
-                    log.debug("parseSseLine - content: {}", content);
-                    
+                    log.trace("parseSseLine - content: {}", content);
+
                     if (content != null && !content.isEmpty()) {
                         return Mono.just(LlmChunk.of(content, false));
                     }
                 }
-                
-                String finishReason = (String) choices.get(0).get("finish_reason");
+
+                String finishReason = (String) choices.getFirst().get("finish_reason");
                 if (finishReason != null && !finishReason.isEmpty()) {
-                    log.debug("parseSseLine - 收到finish_reason: {}", finishReason);
+                    log.trace("parseSseLine - 收到finish_reason: {}", finishReason);
                     return Mono.just(LlmChunk.of("", true));
                 }
             }
         } catch (Exception e) {
             log.warn("parseSseLine - 解析异常: {}", e.getMessage(), e);
         }
-        log.debug("parseSseLine - 返回空");
+        log.trace("parseSseLine - 返回空");
         return Mono.empty();
     }
 
